--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
+    "ejs-lint": "^2.0.1",
     "express": "^5.2.1",
     "nodemon": "^3.1.11"
   }
