--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "ejs": "^3.1.10",
     "ejs-lint": "^2.0.1",
     "express": "^5.2.1",
+    "express-handlebars": "^8.0.4",
     "jsonwebtoken": "^9.0.3",
+    "method-override": "^3.0.0",
     "nodemon": "^3.1.11"
   }
 }
