--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 JWT_SECRET=Your_Very_Long_And_Random_Secret_Key_Here_1234567890
 REFRESH_TOKEN_SECRET="your_refresh_token_secret_key"
+DB_USER=postgres
+DB_HOST=localhost
+DB_NAME=db
+DB_PASSWORD=1234
+DB_PORT=5432
