--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express-handlebars": "^8.0.4",
     "jsonwebtoken": "^9.0.3",
     "method-override": "^3.0.0",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "pg": "^8.17.1",
+    "sequelize": "^6.37.7"
   }
 }
